--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "n8n nodes for Sanity.io mutations",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package, sanity, cms, mutation, transform"
   ],
   "license": "MIT",
   "homepage": "realthreads.io",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/realthreads/n8n-sanity-mutations.git"
   },
   "engines": {
     "node": ">=20.15"
