Fix package.json keywords formatting: separate keywords into individual strings for improved readability

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "n8n-nodes-sanity-mutation",
   "version": "0.1.0",
   "description": "n8n nodes for Sanity.io mutations",
-  "keywords": [
-    "n8n-community-node-package sanity cms mutation transform"
-  ],
+  "keywords": ["n8n-community-node-package", "sanity", "cms", "mutation", "transform"  ],
   "license": "MIT",
   "homepage": "realthreads.io",
   "author": {
