--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "node": ">=20.15"
   },
   "main": "index.js",
+    "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
