--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-sanity-mutation",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "n8n nodes for Sanity.io mutations",
   "keywords": ["n8n-community-node-package", "sanity", "cms", "mutation", "transform"  ],
   "license": "MIT",
@@ -16,7 +16,7 @@
   "engines": {
     "node": ">=20.15"
   },
-  "main": "index.js",
+  "main": "dist/nodes/SanityMutation.node.js",
     "files": [
     "dist"
   ],
@@ -28,9 +28,6 @@
     "lint:fix": "eslint nodes credentials --ext .js,.ts --fix",
     "prepublishOnly": "npm run build && npm run format"
   },
-  "files": [
-    "dist"
-  ],
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
